--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ body {
   padding: 0.25rem 1.25rem;
   border: 2px solid var(--secondary-color);
   border: none;
-  border-radius: 5px;
+  border-radius: 4px;
   outline: none;
   background-color: var(--secondary-color);
   background-color: var(--primary-color);
@@ -173,7 +173,7 @@ Login form
 .register-container h2 {
   color: var(--primary-color);
   font-size: 1.7rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   margin-top: 2rem;
 }
 
@@ -182,7 +182,7 @@ Login form
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  background-color:;
+  background-color: ;
   width: 100%;
   gap: 0.5rem;
 }
@@ -207,10 +207,47 @@ Login form
   border-bottom: 2px solid var(--secondary-color);
 }
 
-.input-box input:focus {
+.input-box .password-input {
+  width: 90%;
+  background-color: ;
+  display: inline-block;
+  position: relative;
+}
+
+.input-box .password-input i {
+  position: absolute;
+  font-size: 0.99rem;
+  text-align: center;
+  color: var(--light-color-600);
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: all 200ms ease-in-out;
+}
+
+.active-eye {
+  color: var(--secondary-color) !important;
+}
+
+.input-box .password-input input {
+  color: var(--light-color-500);
+  width: 100%;
+  height: 1.6rem;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  border-bottom: 2px solid var(--secondary-color);
+}
+
+
+.input-box input:focus,
+.input-box .password-input:focus {
   background-color: transparent;
 }
 
+.input-box .password-input:has(input:focus) + label,
+.input-box .password-input:has(input:valid) + label,
+.input-box .password-input:has(input:hover) + label,
 .input-box input:focus + label,
 .input-box input:valid + label,
 .input-box input:hover + label{
@@ -221,6 +258,12 @@ Login form
   font-size: 1rem;
   text-align: center;
   color: var(--primary-color);
+  background-color: ;
+}
+
+.input-box:has(.password-input) i {
+  position: absolute;
+  right: 2px;
 }
 
 .login-form,
@@ -234,6 +277,63 @@ Login form
   height: 50%;
   padding-top: 3rem;
 }
+
+.input-box div {
+  display: none;
+}
+
+div.error {
+  background-color: #ffcccc;
+  background-color: var(--light-color-700);
+  border-radius: 3px;
+  border: 1px solid #cc0000;
+  width: 80%;
+  min-height: 85%;
+  position: absolute;
+  top: 110%;
+  color: var(--background-color-500);
+  color: #cc0000;
+  font-size: 0.8em;
+  display: flex;
+  align-items: center;
+  padding: 0 10px;
+  z-index: 10;
+}
+
+form button {
+  margin: 0.5rem;
+  transition: all 300ms ease;
+  z-index: 1;
+}
+
+form button::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  background-color: var(--secondary-color);
+  z-index: -1;
+  border-radius: 4px;
+  
+  transform: scaleX(0);
+  transition: all 300ms ease-in-out;
+  transform-origin: left;
+}
+
+form button:hover::before,
+form button:focus::before {
+  transform: scaleX(1);
+}
+
+form button:hover,
+form button:focus {
+  color: var(--primary-color);
+  color: var(--background-color-500);
+}
+
+
 
 
 
