--- a/css/global.css
+++ b/css/global.css
@@ -1,7 +1,11 @@
-*, *::becore, *::after {
+*, *::before, *::after {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+  transition: all 300ms ease;
+}
+
+@font-face {
+  src: url(../assets/fonts/NineTsuki.otf);
+  font-family: tsuki;
 }
 
 :root {
@@ -50,6 +54,7 @@
   --transition: all 300ms ease-in;
   --top: 50%;
   --border-radius-500: 20px;
+  --shadow-100: 3px 3px 10px rgba(0, 0, 0, 0.25);
   
   --gradient-heading-100: linear-gradient(to top, var(--background-color-500) 0%, var(--primary-color) 80%);
   --gradient-100: linear-gradient(to bottom, var(--primary-color) 50%, var(--secondary-color) 80%);
@@ -76,6 +81,7 @@ button {
   transition: var(--transition);
   transform: scale(1);
   letter-spacing: 0.1rem;
+  box-shadow: var(--shadow-100);
 }
 
 .input-box div {
