--- a/css/slide.css
+++ b/css/slide.css
@@ -51,3 +51,341 @@ header
 }
 
 
+/*
+swiper
+*/
+
+.main-section {
+  position: relative;
+  width: 100%;
+  height: calc(100vh - 6rem);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  overflow: hidden;
+}
+
+.slider-section {
+  background-color: ;
+  width: 100%;
+  height: ;
+  
+}
+
+.slider-card-container {
+  position: relative;
+  margin-top: 1rem;
+  width: 16rem;
+  height: 30rem;
+}
+
+.slider-card-wrapper {
+  
+}
+
+.slider-card {
+  border-radius:20px;
+  width: 17rem;
+  height: 25rem;
+  background-color: var(--background-color-300-0);
+  background-image: linear-gradient(to bottom, var(--background-color-400) 0%, var(--background-color-500) 100%);
+  border: 1px solid var(--light-color-700);
+}
+
+.change-border-red {
+  border: 1px solid #ff2c2c;
+}
+
+.change-border-green {
+  border: 1px solid #21d375;
+}
+
+.slider-cardname {
+  position: relative;
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.slider-cardname .cardname {
+  position: relative;
+  height: 88%;
+  width: 90%;
+  padding-top: 1.5rem;
+  overflow: scroll;
+  font-size: 1.7rem;
+  word-wrap: break-word;
+  color: var(--secondary-color);
+  color: var(--light-color-600);
+  font-family: 'tsuki';
+  letter-spacing: 1.2px;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+}
+
+.cardname .fa-chevron-down {
+  position: absolute;
+  font-size: 1rem;
+  right: 0;
+  bottom: .5rem;
+  color: var(--primary-color);
+}
+.cardname .fa-chevron-up {
+  position: absolute;
+  font-size: 1rem;
+  right: 0;
+  top: .5rem;
+  color: var(--primary-color);
+  
+}
+
+.cardname::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, and Opera */
+}
+
+.slider-cardname h4 {
+  position: absolute;
+  left: 5%;
+  bottom: -1px;
+  margin: 0;
+  padding: 0;
+  color: var(--primary-color);
+}
+
+.slider-definition {
+  position: relative;
+  border-top: 1px solid #21d375;
+  border-top: 1px solid var(--light-color-700);
+  width: 100%;
+  height: 50%;
+  display: flex;
+  justify-content: center;
+}
+
+.change-border-top-red {
+  border-top: 1px solid #ff2c2c;
+}
+
+.change-border-top-green {
+  border-top: 1px solid #21d375;
+}
+
+.reveal-definition {
+  width: 100%;
+  height: 100%;
+  background-color: var(--background-color-500);
+  position: absolute;
+  border-radius: 20px;
+  bottom: 0;
+  
+  transition: all 850ms ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 4rem;
+  color: var(--light-color-700);
+  /* border-top: 1px solid var(--light-color-700); */
+}
+
+.show-reveal-definition{
+  bottom: -250px;
+}
+
+
+.list-definition {
+  position: relative;
+  /* height: 100%; */
+  list-style: circle inside;
+  margin: 0;
+  padding: 0;
+  color: var(--primary-color);
+  color: var(--light-color-700);
+  padding-top: 1rem;
+  font-size: .9rem;
+  display: flex;
+  flex-direction: column;
+  gap: .3rem;
+  width: 90%;
+  overflow: scroll;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+}
+
+.list-definition .fa-chevron-down {
+  position: absolute;
+  font-size: 1rem;
+  right: 0;
+  bottom: .5rem;
+  color: var(--primary-color);
+}
+.list-definition .fa-chevron-up {
+  position: absolute;
+  font-size: 1rem;
+  right: 0;
+  top: .5rem;
+  color: var(--primary-color);
+  
+}
+
+.list-definition::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, and Opera */
+}
+
+
+/*
+navigation section
+*/
+
+
+.navigation-section {
+  height: calc(40vh - 6rem);
+  width: 100%;
+  background-color: ;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.navigation-container {
+  background-color: ;
+  position: relative;
+  width: 20rem;
+}
+
+.swiper-prev {
+  position: absolute;
+  left: 0;
+  color: var(--primary-color);
+  font-size: 4.5rem;
+  
+}
+
+.swiper-next {
+  position: absolute;
+  right: 0;
+  color: var(--primary-color);
+  font-size: 4.5rem;
+}
+
+.scrollbar-container {
+  margin-top: .5rem;
+  position: relative;
+  width: 85%;
+  height: 1rem;
+  max-width: 32rem;
+  opacity: .8;
+}
+.swiper-scrollbar {
+  background-color: var(--secondary-color); /* Background color */
+}
+
+.swiper-scrollbar-drag {
+  background-color: var(--primary-color); /* Drag handle color */
+}
+
+
+.swiper-pagination {
+  /* Adjust the position of the pagination */
+  /* transform: translateY(-500%); */
+}
+
+.swiper-pagination-bullet {
+  width: 7px; /* Bullet size */
+  height: 7px;
+  background-color: var(--secondary-color); /* Bullet color */
+  opacity: 0.6; /* Bullet opacity */
+}
+
+.swiper-pagination-bullet-active {
+  background-color: var(--primary-color); /* Active bullet color */
+}
+
+
+/*
+judgment styles
+*/
+
+.judgment-container {
+  background-color: ;
+  position: absolute;
+  left: 50%;
+  top: 1.6rem;
+  transform: translateX(-50%);
+  height: 3.3rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 8rem;
+  font-size: 2rem;
+}
+
+.judgment-container .fa-circle-check {
+  color: #21d375;
+}
+.judgment-container .fa-circle-xmark {
+  color: #ff2c2c;
+}
+
+/*
+update mastery card
+*/
+
+.update-card-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+
+.correct {
+  width: 90%;
+  display: grid;
+  grid-template-columns: .7fr auto;
+  margin-top: 5rem;
+  color: #21d375;
+  border-bottom: 1px solid #21d375;
+}
+
+.correct h4,
+.incorrect h4 {
+  margin: 0;
+}
+
+.incorrect {
+  width: 90%;
+  display: grid;
+  grid-template-columns: .7fr auto;
+  color: #ff2c2c;
+  border-bottom: 1px solid #ff2c2c;
+}
+
+.update-mastery-btn {
+  margin-top: 5rem;
+  transition: all 300ms ease;
+  z-index: 1;
+  overflow:hidden;
+}
+
+.update-mastery-btn::before {
+  transition: all 300ms ease;
+  content: '';
+  transform: scaleX(0);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  background-color: var(--secondary-color);
+  position: absolute;
+}
+
+.update-mastery-btn:hover::before {
+  transform: scaleX(1);
+}
+
