i love mystery girl

--- a/css/select.css
+++ b/css/select.css
@@ -185,3 +185,148 @@ header
   --swiper-pagination-color: var(--primary-color);
   --swiper-pagination-progressbar-size: 3px; 
 }
+
+.pagination-container {
+  position: relative;
+  width: 90vw;
+}
+
+
+/*
+update mastery card
+*/
+
+.update-card-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4rem;
+}
+
+.correct {
+  width: 80%;
+  display: grid;
+  grid-template-columns: .7fr auto;
+  margin-top: 5rem;
+  color: #21d375;
+  border-bottom: 1px solid #21d375;
+}
+
+.correct h4,
+.incorrect h4 {
+  margin: 0;
+}
+
+.incorrect {
+  width: 80%;
+  display: grid;
+  grid-template-columns: .7fr auto;
+  color: #ff2c2c;
+  border-bottom: 1px solid #ff2c2c;
+}
+
+.update-mastery-btn {
+  margin-top: 5rem;
+  transition: all 300ms ease;
+  z-index: 1;
+  overflow:hidden;
+}
+
+.update-mastery-btn::before {
+  transition: all 300ms ease;
+  content: '';
+  transform: scaleX(0);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  background-color: var(--secondary-color);
+  position: absolute;
+}
+
+.update-mastery-btn:hover::before {
+  transform: scaleX(1);
+}
+
+
+/*
+loading spinner
+*/
+
+.loading-spinner-container {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 1000;
+  display: none;
+}
+
+.show-loading-spinner {
+  display: flex;
+}
+
+.loading-spinner-container p {
+  color: var(--primary-color);
+  font-size: .8rem;
+}
+  
+.spinner {
+margin-top: 18rem;
+width: 50px;
+height: 100px;
+text-align: center;
+font-size: 10px;
+}
+
+.spinner > div {
+background-color: var(--primary-color);
+height: 100%;
+width: 6px;
+display: inline-block;
+
+-webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
+animation: sk-stretchdelay 1.2s infinite ease-in-out;
+}
+
+.spinner .rect2 {
+-webkit-animation-delay: -1.1s;
+animation-delay: -1.1s;
+}
+
+.spinner .rect3 {
+-webkit-animation-delay: -1.0s;
+animation-delay: -1.0s;
+}
+
+.spinner .rect4 {
+-webkit-animation-delay: -0.9s;
+animation-delay: -0.9s;
+}
+
+.spinner .rect5 {
+-webkit-animation-delay: -0.8s;
+animation-delay: -0.8s;
+}
+
+@-webkit-keyframes sk-stretchdelay {
+0%, 40%, 100% { -webkit-transform: scaleY(0.4) }  
+20% { -webkit-transform: scaleY(1.0) }
+}
+
+@keyframes sk-stretchdelay {
+0%, 40%, 100% { 
+  transform: scaleY(0.4);
+  -webkit-transform: scaleY(0.4);
+}  20% { 
+  transform: scaleY(1.0);
+  -webkit-transform: scaleY(1.0);
+}
+}
