--- a/css/deck.css
+++ b/css/deck.css
@@ -1,5 +1,7 @@
 
-
+body {
+  --main-height: 100px;
+}
 
 /*
 deck header
@@ -82,7 +84,7 @@ cards section
 
 .cards-section {
   width: 100%;
-  height: calc(100vh - 6rem);
+  height: var(--main-height);
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -130,7 +132,7 @@ button.focused::before {
   gap: 1rem 3rem;
   overflow: scroll;
   justify-items: center;
-  min-height: calc(100vh - 15rem);
+  min-height: calc(var(--main-height) - 9rem);
   padding-bottom: 5rem;
 }
 
@@ -179,8 +181,9 @@ button.focused::before {
 }
 
 .card-content h2 {
-  overflow: scroll;
+  overflow: hidden;
   white-space: nowrap;
+  text-overflow: ellipsis;
   text-overflow: ellipsi;
   margin-left: 3rem;
   font-size: 2.5rem;
@@ -230,7 +233,7 @@ card window
 .black-overlay {
   position: absolute;
   top: 100%;
-  height: calc(100vh - 6rem);
+  height: var(--main-height);
   width: 100vw;
   background-color: rgba(0, 0, 0, 0.7);
   display: none;
@@ -345,7 +348,7 @@ card mastery
 .card-mastery-container {
   position: absolute;
   top: calc(100% + 2rem);
-  height: calc(100vh - 10.5rem);
+  height: calc(var(--main-height) - 4.5rem);
   width: 100%;
   display: flex;
   justify-content: center;
@@ -605,7 +608,7 @@ card fisplay
 .card-display-overlay {
   background-color: rgba(0, 0, 0, 0.8);
   width: 100%;
-  height: calc(100vh - 6rem);
+  height: var(--main-height);
   position: absolute;
   top: 100%;
   z-index: 10000;
